# learn-websocket

./: .gitignore  LICENSE  README.md  express-socketio.js  index.html  package-lock.json  server2.mjs
learn-clipboard/: index.html
learn-http-proxy/: proxy.js
learn-langchain/: langchain1.ipynb  langchain2.ipynb
learn-mlflow/: README.md  pyproject.toml
learn-mlflow/src/learn_mlflow/: logging-first-model.ipynb  main.ipynb
learn-pact/: settings.gradle.kts
learn-pact/pact-consumer-kotlin/: build.gradle.kts  gradle.properties
learn-pact/pact-consumer-kotlin/src/main/kotlin/: Main.kt
learn-pact/pact-consumer-kotlin/src/main/kotlin/models/: Customer.kt
learn-pact/pact-consumer-kotlin/src/test/kotlin/: MainKtTest.kt
learn-pact/pact-provider-spring-kotlin/: .gitignore  build.gradle.kts
learn-pact/pact-provider-spring-kotlin/src/main/kotlin/com/example/pactproviderspringkotlin/: CustomerController.kt  (+1 more)
learn-pact/pact-provider-spring-kotlin/src/main/resources/: application.properties
learn-redsocks/: main.py  readme.md
learn-redsocks/.devcontainer/: devcontainer.json
learn-roslyn/arch-visual/: ArchVisual.sln  readme.md
learn-roslyn/arch-visual/ArchVisual/: ArchVisual.csproj  Program.cs
learn-roslyn/arch-visual/Reflection/: Association.cs  PlantUmlGenerator.cs  TypeExtension.cs
learn-roslyn/arch-visual/Reflection.Test/: PlantUmlGeneratorTest.cs  Reflection.Test.csproj  UnitTest1.cs
learn-toxiproxy/csharp-polly-http/: Program.cs  csharp-polly-http.csproj
learn-websocket/: README.md  haproxy.cfg  nginx.cfg  package.json  server.js
(+2 files in other folders)
