[project]
name = "learn-mlflow"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "chenbojian", email = "chenbojian@foxmail.com"},
]
dependencies = [
    "mlflow>=2.11.1",
    "setuptools>=69.1.1",
    "pip>=24.0",
    "ipykernel>=6.29.3",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
